--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <div class="main-nav container flex">
             <a href="#" onclick="reload()" class="company-logo">
-                <img src="E:\Projects and college works\News Website\assests\logo1.png" alt="company logo">
+                <img src="E:\Projects and college works\News Website\assets\logo1.png" alt="company logo">
             </a>
             <div class="nav-links">
                 <ul class="flex">
