--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <nav>
         <div class="main-nav container flex">
             <a href="#" onclick="reload()" class="company-logo">
-                <img src="E:\Projects and college works\News Website\assets\logo1.png" alt="company logo">
+                <img src=".\assets\logo1.png" height="100px"  width="auto" alt="logo">
             </a>
             <div class="nav-links">
                 <ul class="flex">
                     <li class="hover-link nav-item" id="ipl" onclick="onNavItemClick('ipl')">IPL</li>
-                    <li class="hover-link nav-item" id="finance" onclick="onNavItemClick('finance')">Finance</li>
+                    <li class="hover-link nav-item" id="finance" onclick="onNavItemClick('finance ')">Finance News</li>
                     <li class="hover-link nav-item" id="politics" onclick="onNavItemClick('politics')">Politics</li>
                 </ul>
             </div>
             <div class="search-bar flex">
-                <input id="search-text" type="text" class="news-input" placeholder="e.g. Science">
+                <input id="search-text" type="text" class="news-input" placeholder="e.g. education">
                 <button id="search-button" class="search-button">Search</button>
             </div>
         </div>
